Reactive impl for highscores